name:                dungeon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/dungeon#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          dmitri83@hcoop.net
copyright:           2016 Dmitry Sustretov
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dungeon.Map, Dungeon.Movement, Dungeon.Controls
  build-depends:       base >= 4.7 && < 5
                     , auto
                     , array
                     , vty
                     , data-default
  default-language:    Haskell2010

executable dungeon-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dungeon
                     , vty
                     , auto
                     , array
                     , data-default
  default-language:    Haskell2010

test-suite dungeon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dungeon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dungeon
